# cozy-kit-plugin-fancy-greetings

./: .gitignore  README.md  pyproject.toml
cozy_kit_plugin_fancy_greetings/: __init__.py  engine.py  greet_cli.py  metadata.json
